chore(lint): change eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,28 +24,28 @@
     "import/no-unresolved": [0],
     "require-yield": [1],
 
-    "no-extra-semi": 1,
+    "no-extra-semi": [1],
     "no-inner-declarations": [2,"both"],
     "valid-jsdoc": [2,{"requireReturn":false,"prefer":{"returns":"return"}}],
     "curly": [2,"all"],
-    "no-eval": 2,
+    "no-eval": [2],
     "no-extend-native": [2,{"exceptions":["Object"]}],
-    "no-new-wrappers": 2,
-    "no-with": 2,
-    "no-undef": 2,
+    "no-new-wrappers": [2],
+    "no-with": [2],
+    "no-undef": [2],
     "no-unused-vars": [2,{"args":"none"}],
     "array-bracket-spacing": [2,"never",{}],
     "indent": [2,2,{"SwitchCase":1}],
-    "no-array-constructor": 2,
+    "no-array-constructor": [2],
     "no-mixed-spaces-and-tabs": [2,"smart-tabs"],
-    "no-new-object": 2,
+    "no-new-object": [2],
     "object-curly-spacing": [2,"never",{}],
     "semi": [2,"always"],
     "space-before-function-paren": [2,"never"],
     "max-len": [0,80,4,{"ignoreComments":true,"ignoreUrls":true}],
-    "func-names": 0,
+    "func-names": [0],
     "comma-dangle": [2,"never"],
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
