--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "^6.23.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
+    "prop-types": "^15.5.6",
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
   },
