--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "install-node": "6.9.2"
   },
   "dependencies": {
-    "antd": "^2.9.1",
+    "antd": "^2.9.3",
     "babel-runtime": "^6.23.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
@@ -19,7 +19,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -31,6 +31,6 @@
     "expect": "^1.20.2",
     "husky": "^0.13.3",
     "redbox-react": "^1.3.6",
-    "roadhog": "^0.5.3"
+    "roadhog": "^0.6.0-beta.4"
   }
 }
