--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "private": true,
   "scripts": {
-    "start": "roadhog server",
     "build": "roadhog build",
+    "precommit": "npm run lint",
     "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
-  },
-  "engines": {
-    "install-node": "6.9.2"
+    "start": "roadhog server"
   },
   "dependencies": {
     "antd": "^2.9.3",
-    "babel-runtime": "^6.23.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
     "prop-types": "^15.5.8",
@@ -23,6 +18,7 @@
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -32,5 +28,9 @@
     "husky": "^0.13.3",
     "redbox-react": "^1.3.6",
     "roadhog": "^0.6.0-beta.4"
-  }
+  },
+  "engines": {
+    "install-node": "6.9.2"
+  },
+  "private": true
 }
