--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "roadhog server"
   },
   "dependencies": {
-    "antd": "^2.9.3",
+    "antd": "^2.10.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
     "prop-types": "^15.5.8",
@@ -22,12 +22,12 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
     "expect": "^1.20.2",
     "husky": "^0.13.3",
     "redbox-react": "^1.3.6",
-    "roadhog": "^0.6.0-beta.4"
+    "roadhog": "^0.6.0"
   },
   "engines": {
     "install-node": "6.9.2"
