--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "ejs-loader": "^0.3.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.0",
     "expect": "^1.20.2",
+    "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.3",
     "redbox-react": "^1.3.6",
-    "roadhog": "^0.6.0"
+    "roadhog": "^0.6.0",
+    "webpack-md5-hash": "0.0.5"
   },
   "engines": {
     "install-node": "6.9.2"
