--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "antd": "^2.10.0",
+    "babel-polyfill": "^6.23.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
     "prop-types": "^15.5.8",
