--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "roadhog server"
   },
   "dependencies": {
-    "antd": "^3.0.3",
+    "antd": "^3.1.1",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "dva": "^2.1.0",
@@ -22,19 +22,19 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.1.2",
-    "babel-plugin-dva-hmr": "^0.4.0",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-dva-hmr": "^0.4.1",
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
-    "eslint": "^4.14.0",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "expect": "^22.0.3",
     "redbox-react": "^1.5.0",
-    "roadhog": "^1.3.3"
+    "roadhog": "1.3.3"
   },
   "engines": {
     "install-node": "6.x"
